--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -31,3 +31,5 @@ craft_on_surface:surface_crafting_recipe
 hordes:infection_cures
 ftbquests:loot_crate
 ftbquests:quest
+lychee:item_inside/minecraft/default
+lychee:block_interacting/minecraft/default
