Reworked slightly on new Legendary Survival Overhaul config

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,12 +1,8 @@
 Minecraft
 AstikorCarts Redux
 Brick Furnace
-Decorative Storage
-Den's addition
 Farmer's Delight
 Hardmode Ores Mod
-Iguana Tweaks Expanded
-Iguana Tweaks Reborn
 Legendary Survival Overhaul
 Lit it Up
 LittleTiles
@@ -18,19 +14,31 @@ Realistic Torches
 Serene Seasons
 ShieldsPlus
 Sooty Chimneys
-Workshop for handsome adventurer
 YTech
 YUNG's Cave Biomes
 Craft On Surface
 The Hordes
 RevampedWolf
 Enemy Expansion
-Legendary Creatures
 Luminous Monsters
-Alex's Delight
-Alex's Mobs
-Alexs Mobs Interaction
-Patchouli
 FTB Quests
 Storage Pots
-Wooden Shears
+Blocky Siege
+Brick Hopper
+Burnt Basic 1.9.0.2 Forge 1.20.1
+Countered's Terrain Slabs
+Dens_addition
+Dew Drop Watering Cans
+Drop the Meat
+Immersive Weathering
+Insane's Survival Extra
+Insane's Survival Overhaul
+Item Filters
+Naturalist
+Naturalist_Delight
+Quark
+Quark Delight
+Rucksacks.
+Sapwood
+Simply Traps
+Wild Berries
