Config of important mods redone. Handling of crops growth through datapack now. Torches extinguish in water

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,6 @@ patchouli_data.json
 minecraftinstance.json
 emi.json
 .curseclient
+config/oculus.properties
+config/fabric/indigo-renderer.properties
+config/spawnbalanceutility/AllMobEntities.rpt
