--- a/config/enhancedai/common.toml
+++ b/config/enhancedai/common.toml
@@ -157,7 +157,7 @@
 	[Spiders."Throwing Web"]
 		#Chance for a Spider to spawn with the ability to throw webs at the target.
 		#Range: 0.0 ~ 1.0
-		"Web Throw Chance" = 0.1
+		"Web Throw Chance" = 0.2
 		#After how many ticks will the cobweb placed by the web projectile be destroyed?
 		#Range: 0 ~ 6000
 		"Destroy Web After" = 100
@@ -190,7 +190,7 @@
 		[Spiders."Throwing Web".Slowness]
 			#How many ticks of slowness are applied to the target hit by the web?
 			#Range: 0 ~ 6000
-			Duration = 120
+			Duration = 60
 			#How many levels of slowness are applied to the target hit by the web?
 			#Range: 0 ~ 128
 			Amplifier = 0
@@ -218,7 +218,7 @@
 	#Wither skeletons can spawn with a bow and shoot Wither arrows.
 	"Enable Wither Skeletons" = true
 	#Skeletons try to stay away from the target. Use the enhancedai:skeleton_flee entity type tag to add/remove skeletons that are affected by this feature
-	"Enable Skeleton Flee" = true
+	"Enable Skeleton Flee" = false
 
 	#Skeletons are more precise when shooting and strafing is removed, can hit a target from up to 64 blocks and try to stay away from the target. Use the enhancedai:better_skeleton_shoot entity type tag to add more skeletons that are affected by this feature
 	[Skeletons."Skeleton Shoot"]
@@ -377,7 +377,7 @@
 	#Makes mobs be able to move in more ways, like climbing or swim. Only mobs in the enhancedai:allow_climbing entity type tag are allowed to climb.
 	"Enable Movement" = true
 	#Make mobs angry when a block is broken. Check the mod's config folder Mobs/Break Anger/break_anger_config.json to change blocks and entities triggered.
-	"Enable Break Anger" = true
+	"Enable Break Anger" = false
 	#Prevent players from abusing some game mechanics to stop mobs. Only mobs in the entity type tag enhancedai:can_use_anti_cheese will be affected by this feature.
 	"Enable Anti-Cheese" = true
 	#Mobs can mine blocks to reach the target. Uses offhand item to mine. Only mobs in the entity type tag enhancedai:can_be_miner can spawn with the ability to mine and blocks in the tag enhancedai:miner_block_blacklist cannot be mined.
@@ -385,7 +385,7 @@
 	#Mobs can bite if are attacked with non-weapons. Only mobs in the enhancedai:can_bite entity type tag can bite.
 	"Enable Biting Mobs" = true
 	#Use enhancedai:can_open_doors to add more mobs that can open doors.
-	"Enable Open Doors" = true
+	"Enable Open Doors" = false
 	#Makes mobs ride other mobs
 	"Enable Riding" = true
 	#Mobs can flee or attack Wardens. Use the entity type tag enhancedai:ignore_warden_interaction to blacklist mobs.
@@ -397,7 +397,7 @@
 	#Change how mobs target players. Use the enhancedai:use_target_changes and enhancedai:use_follow_range_changes entity type tag to whitelist mobs. Add mobs to enhancedai:allow_target_switch entity type tag to allow these mobs to be able to switch targets when hit (e.g. Creepers can't normally do that).
 	"Enable Targeting" = false
 	#Makes mobs be able to jump in place when target is a few blocks above the mob.
-	"Enable Jump" = true
+	"Enable Jump" = false
 	#Endermen will make the player's item fall from his hands. Add/remove mobs via the enhancedai:can_disrupt_item entity type tag
 	"Enable Item Disruption" = true
 	#Let mobs use Fishing Rods, reeling players in. Either put a Fishing Rod in main or off hand and when near enough from the target they will use it. Only mobs in enhancedai:can_be_fisher entity type tag are affected by this feature.
@@ -495,7 +495,7 @@
 			#Range: 0.0 ~ 1.0
 			"Easy/Peaceful" = 0.03
 			#Range: 0.0 ~ 1.0
-			Normal = 0.06
+			Normal = 0.1
 			#Range: 0.0 ~ 1.0
 			Hard = 0.1
 
