--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -290,6 +290,8 @@ enhancedai\:creeper_cena_fuse=true
 enhancedai\:old_explode=true
 enhancedai\:wtf_boom_explode=true
 enhancedai\:wtf_boom_fuse=true
+epicsiegemod\:cena_creeper.end=true
+epicsiegemod\:cena_creeper.start=true
 farmersdelight\:block.cabinet.close=true
 farmersdelight\:block.cabinet.open=true
 farmersdelight\:block.cooking_pot.boil=true
@@ -306,6 +308,52 @@ farmersdelight\:item.skillet.attack.weak=true
 iguanatweaksexpanded\:electrocution=true
 iguanatweaksreborn\:absorption_hit=true
 iguanatweaksreborn\:unfair_one_shot=true
+illagerinvasion\:entity.archivist.ambient=true
+illagerinvasion\:entity.archivist.death=true
+illagerinvasion\:entity.archivist.hurt=true
+illagerinvasion\:entity.basher.celebrate=true
+illagerinvasion\:entity.basher.death=true
+illagerinvasion\:entity.basher.hurt=true
+illagerinvasion\:entity.basher.idle=true
+illagerinvasion\:entity.firecaller.cast=true
+illagerinvasion\:entity.firecaller.death=true
+illagerinvasion\:entity.firecaller.hurt=true
+illagerinvasion\:entity.firecaller.idle=true
+illagerinvasion\:entity.illager_brute.ambient=true
+illagerinvasion\:entity.illager_brute.death=true
+illagerinvasion\:entity.illager_brute.hurt=true
+illagerinvasion\:entity.invoker.ambient=true
+illagerinvasion\:entity.invoker.big_cast=true
+illagerinvasion\:entity.invoker.completecast=true
+illagerinvasion\:entity.invoker.death=true
+illagerinvasion\:entity.invoker.fangs=true
+illagerinvasion\:entity.invoker.fangs_cast=true
+illagerinvasion\:entity.invoker.hurt=true
+illagerinvasion\:entity.invoker.shield_break=true
+illagerinvasion\:entity.invoker.shield_create=true
+illagerinvasion\:entity.invoker.summon_cast=true
+illagerinvasion\:entity.invoker.teleport_cast=true
+illagerinvasion\:entity.necromancer.summon=true
+illagerinvasion\:entity.provoker.celebrate=true
+illagerinvasion\:entity.provoker.death=true
+illagerinvasion\:entity.provoker.hurt=true
+illagerinvasion\:entity.provoker.idle=true
+illagerinvasion\:entity.sorcerer.cast=true
+illagerinvasion\:entity.sorcerer.celebrate=true
+illagerinvasion\:entity.sorcerer.complete_cast=true
+illagerinvasion\:entity.sorcerer.death=true
+illagerinvasion\:entity.sorcerer.hurt=true
+illagerinvasion\:entity.sorcerer.idle=true
+illagerinvasion\:entity.surrendered.ambient=true
+illagerinvasion\:entity.surrendered.charge=true
+illagerinvasion\:entity.surrendered.death=true
+illagerinvasion\:entity.surrendered.hurt=true
+illagerinvasion\:item.horn_of_sight.blow=true
+illagerinvasion\:item.lost_candle.coal=true
+illagerinvasion\:item.lost_candle.copper=true
+illagerinvasion\:item.lost_candle.diamond=true
+illagerinvasion\:item.lost_candle.gold=true
+illagerinvasion\:item.lost_candle.iron=true
 immersive_weathering\:icicle_crack=true
 legendarycreatures\:bullfrog_attack=true
 legendarycreatures\:bullfrog_death=true
