Final tweaks before 0.1.5

--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -415,6 +415,9 @@ legendarysurvivaloverhaul\:sewing_table=true
 legendarysurvivaloverhaul\:shivering=true
 luminous_monsters\:crimsonexplosion=true
 luminous_monsters\:crimsongrowl=true
+map_atlases\:atlas_create_map=true
+map_atlases\:atlas_open=true
+map_atlases\:atlas_page_turn=true
 minecraft\:ambient.basalt_deltas.additions=true
 minecraft\:ambient.basalt_deltas.loop=true
 minecraft\:ambient.basalt_deltas.mood=true
