--- a/config/world_preview/config.json
+++ b/config/world_preview/config.json
@@ -1,6 +1,6 @@
 {
   "savedSeeds": [],
-  "showInPauseMenu": true,
+  "showInPauseMenu": false,
   "showPlayer": true,
   "showControls": true,
   "showFrameTime": false,
