--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -2315,6 +2315,7 @@ storage_pots\:virtualinsanity=true
 storage_pots\:yippee=true
 subtle_effects\:block.amethyst_cluster.chime=true
 subtle_effects\:block.campfire.sizzle=true
+subtle_effects\:block.cauldron.clean_item=true
 subtle_effects\:block.lava.drip=true
 subtle_effects\:block.lava.drip_into_fluid=true
 subtle_effects\:block.water.drip=true
@@ -2323,6 +2324,7 @@ subtle_effects\:entity.egg.break=true
 subtle_effects\:entity.player.heartbeat=true
 subtle_effects\:entity.player.snore=true
 subtle_effects\:entity.player.stomach_growl=true
+subtle_effects\:entity.snowball.poof=true
 subtle_effects\:entity.villager.snore=true
 subtle_effects\:environment.geyser.whoosh=true
 treechop\:chop_wood=true
