Added recipe for Improvised Armor Nerfed burn spread Added and integrated Charcoal Pit (lot of new recipes and quests) Started to implement correctly the spoiling system Tweaked quests

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -9,9 +9,6 @@ minecraft:furnace
 minecraft:smithing
 minecraft:smoking
 minecraft:stonecutting
-brickfurnace:blasting
-brickfurnace:smelting
-brickfurnace:smoking
 farmersdelight:cooking
 farmersdelight:cutting
 farmersdelight:decomposition
@@ -33,3 +30,8 @@ ftbquests:loot_crate
 ftbquests:quest
 lychee:item_inside/minecraft/default
 lychee:block_interacting/minecraft/default
+charcoal_pit:barrel_recipe
+charcoal_pit:bloomery_recipe
+charcoal_pit:charcoal_pit_recipe
+charcoal_pit:orekiln_recipe
+charcoal_pit:pottery_recipe
