--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -1976,6 +1976,9 @@ naturalist\:entity.zebra.hurt=true
 naturalist\:entity.zebra.jump=true
 naturalist\:item.bucket.empty_snail=true
 naturalist\:item.bucket.fill_snail=true
+overgeared\:anvil_hit=true
+overgeared\:forging_complete=true
+overgeared\:forging_failed=true
 particlerain\:weather.sandstorm=true
 particlerain\:weather.sandstorm.above=true
 particlerain\:weather.snow=true
