--- a/config/legendarysurvivaloverhaul/legendarysurvivaloverhaul-common.toml
+++ b/config/legendarysurvivaloverhaul/legendarysurvivaloverhaul-common.toml
@@ -57,9 +57,10 @@
 	# How much of an effect sprinting has on a player's temperature.
 	#Range: -1000.0 ~ 1000.0
 	"Player Sprint Modifier" = 1.4
-	# How much the effects of the player's altitude on temperature are multiplied starting at Y 64.
-	# Each 64 blocks further from Y 64 will reduce player's temperature by this value.
-	# It means that for a value of -5, the body temperature of the player is reduced by 5 for each 64 blocks (the calculus is done linearly).
+	# How much of an effect altitude has on player's temperature.
+	# Each 64 blocks further from sea level will impact player's temperature by this value.
+	# The sea level can be defined via datapack under the dimension's temperature.
+	# As an example, a value of -6 will reduce the player's temperature by 6 for each 64 blocks (the calculus is done linearly).
 	#Range: -1000.0 ~ 1000.0
 	"Altitude Modifier" = -5.0
 	# Chance of the ferns to become a gold fern when grow mature.
@@ -102,6 +103,8 @@
 		# By default, every 10 ticks, the wetness will either increase or decrease, based on the conditions.
 		#Range: 1 ~ 100000
 		"Wetness Tick Timer" = 10
+		# List of mounts that provide a wetness immunity.
+		"Wetness Immunity Mounts" = ["alexscaves:submarine", "immersive_machinery:bamboo_bee", "immersive_machinery:tunnel_digger", "immersive_machinery:redstone_sheep", "immersive_machinery:copperfin"]
 
 	[temperature.huddling]
 		# How much nearby players increase the ambient temperature by.
@@ -239,9 +242,9 @@
 			#Range: 0.0 ~ 1000.0
 			"TerraFirmaCraft Item Heat Multiplier" = 0.01
 
-		[temperature.integration.seasons]
-			# If Serene Seasons is installed, then seasons will have an effect on the player's temperature.
-			"Seasons affect Temperature" = true
+		[temperature.integration.serene-seasons]
+			# If Serene Seasons is installed, whether the seasons have an effect on the player's temperature.
+			"Serene Seasons Enabled" = true
 			# If the tropical seasons are disabled, the normal summer-autumn-winter-spring seasons are applied.
 			# If disabled, dry and wet seasons are applied for hot biomes.
 			"Tropical Seasons Enabled" = false
@@ -252,44 +255,44 @@
 			"Default Season Enabled" = true
 
 			# Temperature modifiers per season in temperate biomes. The value is reached at the middle of the sub season, and smoothly transition from one to another.
-			[temperature.integration.seasons.temperate]
+			[temperature.integration.serene-seasons.temperate]
 
-				[temperature.integration.seasons.temperate.spring]
+				[temperature.integration.serene-seasons.temperate.spring]
 					#Range: -1000.0 ~ 1000.0
-					"Early Spring Modifier" = -2.0
+					"Early Spring Modifier" = -3.0
 					#Range: -1000.0 ~ 1000.0
 					"Mid Spring Modifier" = 0.0
 					#Range: -1000.0 ~ 1000.0
-					"Late Spring Modifier" = 2.0
+					"Late Spring Modifier" = 3.0
 
-				[temperature.integration.seasons.temperate.summer]
+				[temperature.integration.serene-seasons.temperate.summer]
 					#Range: -1000.0 ~ 1000.0
-					"Early Summer Modifier" = 4.0
+					"Early Summer Modifier" = 6.0
 					#Range: -1000.0 ~ 1000.0
-					"Mid Summer Modifier" = 7.0
+					"Mid Summer Modifier" = 10.0
 					#Range: -1000.0 ~ 1000.0
-					"Late Summer Modifier" = 4.0
+					"Late Summer Modifier" = 6.0
 
-				[temperature.integration.seasons.temperate.autumn]
+				[temperature.integration.serene-seasons.temperate.autumn]
 					#Range: -1000.0 ~ 1000.0
-					"Early Autumn Modifier" = 2.0
+					"Early Autumn Modifier" = 3.0
 					#Range: -1000.0 ~ 1000.0
 					"Mid Autumn Modifier" = 0.0
 					#Range: -1000.0 ~ 1000.0
-					"Late Autumn Modifier" = -2.0
+					"Late Autumn Modifier" = -3.0
 
-				[temperature.integration.seasons.temperate.winter]
+				[temperature.integration.serene-seasons.temperate.winter]
 					#Range: -1000.0 ~ 1000.0
-					"Early Winter Modifier" = -8.0
+					"Early Winter Modifier" = -7.0
 					#Range: -1000.0 ~ 1000.0
-					"Mid Winter Modifier" = -14.0
+					"Mid Winter Modifier" = -12.0
 					#Range: -1000.0 ~ 1000.0
-					"Late Winter Modifier" = -8.0
+					"Late Winter Modifier" = -7.0
 
 			# Temperature modifiers per season in tropical biomes.
-			[temperature.integration.seasons.tropical]
+			[temperature.integration.serene-seasons.tropical]
 
-				[temperature.integration.seasons.tropical.wet-season]
+				[temperature.integration.serene-seasons.tropical.wet-season]
 					#Range: -1000.0 ~ 1000.0
 					"Early Wet Season Modifier" = -1.0
 					#Range: -1000.0 ~ 1000.0
@@ -297,13 +300,24 @@
 					#Range: -1000.0 ~ 1000.0
 					"Late Wet Season Modifier" = -1.0
 
-				[temperature.integration.seasons.tropical.dry-season]
+				[temperature.integration.serene-seasons.tropical.dry-season]
 					#Range: -1000.0 ~ 1000.0
 					"Early Dry Season Modifier" = 3.0
 					#Range: -1000.0 ~ 1000.0
 					"Mid Dry Season Modifier" = 7.0
 					#Range: -1000.0 ~ 1000.0
 					"Late Dry Season Modifier" = 3.0
+
+		[temperature.integration.ecliptic-seasons]
+			# If Ecliptic Seasons is installed, whether the seasons have an effect on the player's temperature.
+			"Ecliptic Seasons Enabled" = true
+
+			# Temperature modifiers per season. Each season is subdivided in 6 sub seasons. The value is reached at the middle of the sub season, and smoothly transition from one to another.
+			[temperature.integration.ecliptic-seasons.temperature]
+				"Spring Modifier" = [-10.0, -7.0, -5.0, -3.0, -1.0, 0.0]
+				"Summer Modifier" = [1.0, 3.0, 5.0, 7.0, 9.0, 10.0]
+				"Autumn Modifier" = [9.0, 7.0, 5.0, 3.0, 1.0, 0.0]
+				"Winter Modifier" = [-1.0, -3.0, -5.0, -7.0, -10.0, -12.0]
 
 	[temperature.temperature-immunity]
 		# If enabled, players will be immune to temperature effects after death.
@@ -333,7 +347,7 @@
 	# Scaling of the damages dealt when completely dehydrated. Each tick damage will be increased by this value.
 	#Range: 0.0 ~ 1000.0
 	"Dehydration Damage Scaling" = 0.3
-	# How many thirst exhaustion will be added every 50 ticks when the player suffers from not amplified Thirst Effect.
+	# How much thirst exhaustion will be added every 50 ticks when the player suffers from not amplified Thirst Effect.
 	# The player will suffer Thirst Effect from dirty water for example.
 	#Range: 0.0 ~ 1000.0
 	"Thirst Effect Modifier" = 0.25
@@ -460,13 +474,13 @@
 			#   LIMB_DYNAMIC - The limb health regenerated is a percentage value of the limb max health using the percentage value defined in First Aid Supplies Limb Health Regenerated.
 			# Any other value will default to SIMPLE.
 			"First Aid Supplies Limb Regeneration Mode" = "LIMB_DYNAMIC"
-			# Whether or not the exceeded limb health regenerated will heal the next most damaged limb.
+			# Whether the exceeded limb health regenerated will heal the next most damaged limb.
 			# Only available for Regeneration Mode SIMPLE or PLAYER_DYNAMIC.
 			"First Aid Supplies Healing Overflow" = false
 			# How fast in ticks the First Aid Supplies will heal limbs. 20 ticks = 1s
 			#Range: 0 ~ 10000
 			"First Aid Supplies Tick Timer" = 300
-			# Whether or not the First Aid Supplies exhaust food when healing limbs, such as the other healing items.
+			# Whether the First Aid Supplies exhaust food when healing limbs, such as the other healing items.
 			"First Aid Supplies Exhausts Food" = true
 			# The First Aid Supplies will heal limbs faster when the player is under one of the mentioned effect.
 			"First Aid Supplies Boosted On Effects" = ["minecraft:regeneration", "farmersdelight:comfort"]
@@ -604,6 +618,13 @@
 			"Both Feet Part Effect Amplifiers" = [1]
 			"Both Feet Part Effect Thresholds" = [0.1]
 
+	[body-damage.integration]
+
+		[body-damage.integration.meds_and_herbs]
+			# Painkiller Addiction effect prevents the abusive usage of Painkiller effect that prevents all negative effects from limbs.
+			# Syringe Morphine share the same configuration as Morphine item
+			"Syringe Morphine Apply Painkiller Addiction" = true
+
 # Options related to health overhaul
 [health-overhaul]
 	# How much of Additional Health a player can accumulate. 2 Heath means a full heart.
@@ -636,6 +657,14 @@
 		#Range: 1 ~ 10000
 		"Minimum Amount Of Player's Heart With Broken Hearts (Broken Heart Resilience)" = 2
 		# Amount of Broken Hearts added per limbs fully injured.
-		#Range: 0 ~ 10000
+		#Range: 0.0 ~ 10000.0
 		"Added Broken Hearts Per Injured Limb" = 1
+		# How broken hearts inflicted per injured limbs are calculated. The total amount will be round down to have an integer amount of broken hearts.
+		# For example, if the amount per injured limb is 0.1 with mode Player Dynamic and the player has 3 limbs injured, the total amount is 3 * (0.1 * 20), 20 being the default player max health, so 6 broken hearts will be inflicted.
+		# Accepted values are as follows:
+		#   SIMPLE - The broken heart amount is a fixed value defined in Broken Hearts Per Injured Limb.
+		#   PLAYER_DYNAMIC - The broken heart amount is a percentage value of the player max health using the percentage value defined in Broken Hearts Per Injured Limb.
+		#   LIMB_DYNAMIC - The broken heart amount is a percentage value of the injured limb max health using the percentage value defined in Broken Hearts Per Injured Limb.
+		# Any other value will default to SIMPLE.
+		"Broken Hearts Per Injured Limb Mode" = "PLAYER_DYNAMIC"
 
