--- a/config/modernfix-mixins.properties
+++ b/config/modernfix-mixins.properties
@@ -86,6 +86,7 @@
 #  mixin.perf.forge_cap_retrieval=true # (default)
 #  mixin.perf.forge_registry_alloc=true # (default)
 #  mixin.perf.forge_registry_lambda=true # (default)
+#  mixin.perf.ingredient_item_deduplication=false # (default)
 #  mixin.perf.kubejs=true # (default)
 #  mixin.perf.lazy_search_tree_registry=true # (default)
 #  mixin.perf.memoize_creative_tab_build=true # (default)
@@ -97,7 +98,7 @@
 #  mixin.perf.remove_biome_temperature_cache=true # (default)
 #  mixin.perf.remove_spawn_chunks=false # (default)
 #  mixin.perf.resourcepacks=true # (default)
-#  mixin.perf.smart_ingredient_sync=true # (default)
+#  mixin.perf.smart_ingredient_sync=false # (overridden for mod compat)
 #  mixin.perf.state_definition_construct=true # (default)
 #  mixin.perf.tag_id_caching=true # (default)
 #  mixin.perf.thread_priorities=true # (default)
