--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -35,3 +35,8 @@ charcoal_pit:bloomery_recipe
 charcoal_pit:charcoal_pit_recipe
 charcoal_pit:orekiln_recipe
 charcoal_pit:pottery_recipe
+overgeared:forging
+overgeared:rock_knapping
+overgeared:flint_knapping
+overgeared:stone_anvil
+overgeared:steel_anvil
