--- a/config/spoiled-common.toml
+++ b/config/spoiled-common.toml
@@ -4,7 +4,7 @@
 	#Determines the spoilrate in specific containers [Syntax: tileentity:spoil_rate]
 	#Examples: "minecraft:shulker_box,0" would make shulker boxes not spoil food
 	#"cookingforblockheads:fridge,0.2" would make a cooking for blockheads fridge spoil at 20% of the usual spoilrate
-	containerModifier = ["minecraft:shulker_box,0", "minecraft:chest,0.9", "farmersdelight:oak_cabinet,0.75", "farmersdelight:spruce_cabinet,0.75", "farmersdelight:birch_cabinet,0.75", "farmersdelight:jungle_cabinet,0.75", "farmersdelight:acacia_cabinet,0.75", "farmersdelight:dark_oak_cabinet,0.75", "farmersdelight:mangrove_cabinet,0.75", "farmersdelight:cherry_cabinet,0.75", "farmersdelight:bamboo_cabinet,0.75", "farmersdelight:crimson_cabinet,0.75", "farmersdelight:warped_cabinet,0.75"]
+	containerModifier = ["minecraft:shulker_box,0", "ceramiccrock:small_crock,0.5", "ceramiccrock:large_crock,0.5", "minecraft:chest,0.9", "farmersdelight:oak_cabinet,0.75", "farmersdelight:spruce_cabinet,0.75", "farmersdelight:birch_cabinet,0.75", "farmersdelight:jungle_cabinet,0.75", "farmersdelight:acacia_cabinet,0.75", "farmersdelight:dark_oak_cabinet,0.75", "farmersdelight:mangrove_cabinet,0.75", "farmersdelight:cherry_cabinet,0.75", "farmersdelight:bamboo_cabinet,0.75", "farmersdelight:crimson_cabinet,0.75", "farmersdelight:warped_cabinet,0.75"]
 	#Defines the default total amount of spoiling updates for each food item 
 	#(For example, a defaultSpoilTime of 40 means any default food item will have 40 total updates before it spoils. 
 	#This can be altered when custom food spoiling is set using a datapack) [default: 30]
@@ -24,6 +24,10 @@
 	defaultSpoilTime = 80
 	#Defines the item the foods vanilla foods will turn into when spoiled (if empty it will clear the spoiling item) [default: 'minecraft:rotten_flesh']
 	defaultSpoilItem = "minecraft:rotten_flesh"
+	#Determines the spoilrate in specific item containers [Syntax: modid:item_id]
+	#Examples: "minecraft:shulker_box,0" would make shulker boxes not spoil food
+	#
+	itemContainerModifier = ["minecraft:shulker_box,0", "ceramiccrock:small_crock,0.5", "ceramiccrock:large_crock,0.5"]
 
 #Compatibility settings
 [Compatibility]
