--- a/config/subtle_effects/entities.toml
+++ b/config/subtle_effects/entities.toml
@@ -1,10 +1,13 @@
 # Don't change this! Version used to track needed updates.
 version = 0
-enderPearlTrail = true
+chickenFeathers = true
+parrotFeathers = true
+snowGolemSnowflakes = true
 allayMagicDensity = 0.2
 vexMagicDensity = 0.2
 sheepShearFluff = true
 improvedDragonFireballTrail = true
+dragonsBreathClouds = true
 commandBlockMinecartParticles = "ON"
 endCrystalParticles = true
 minecartSparksDisplayType = "DEFAULT"
@@ -17,29 +20,22 @@ replaceSpellCasterParticles = true
 ironGolemCrackParticles = true
 spectralArrowParticles = true
 wardenDeathSoulParticles = true
-xpBottleParticlesDisplayType = "DEFAULT"
-xpBottleParticlesDensity = 10
-eggSmashSoundVolume = 0.5
-eggSplatParticles = true
 freezingSnowFlakes = true
 featherTicklingPandas = true
 improvedPandaSneezes = true
-snowballTrailDensity = 0.5
-snowballPoofsHaveSnowflakes = true
-snowballPoofSoundVolume = 0.3
 villagerWorkAtWorkstationParticles = true
-
-[attacked]
-chickenFeathers = true
-parrotFeathers = true
-snowGolemSnowflakes = true
+improvedBrownMooshroomFeedingEffects = true
+improvedMooshroomShearingEffects = true
+replaceBlazeSmoke = true
+animalFeedingParticles = true
+animalFeedingSoundVolume = 1.0
 
 [sleeping]
 playerSnoreChance = 1.0
-playerSnoreSoundVolume = 1.0
+playerSnoreSoundVolume = 0.5
 playersHaveSleepingZs = true
 villagerSnoreChance = 1.0
-villagerSnoreSoundVolume = 1.0
+villagerSnoreSoundVolume = 0.3
 villagersHaveSleepingZs = true
 foxesHaveSleepingZs = true
 batsHaveSleepingZs = true
@@ -50,7 +46,7 @@ adjustNameTagWhenSleeping = true
 
 [humanoids]
 drowningBubblesDisplayType = "DEFAULT"
-drowningBubblesDensity = 10
+drowningBubblesDensity = 8
 drowningBubbleAlpha = 1.0
 forceDrowningBubblesToColumn = false
 potionRingsDisplayType = "DEFAULT"
@@ -60,21 +56,21 @@ NPCsHavePotionRings = true
 [humanoids.frostyBreath]
 displayType = "DEFAULT"
 alpha = 0.5
-waitTime = 60
+waitTime = 80
 seasons = "DEFAULT"
 additionalBiomes = [  ]
 
 [humanoids.player]
 enableBreathingEffectsInCreative = true
 stomachGrowlingThreshold = 6
-stomachGrowlingVolume = 1.0
+stomachGrowlingVolume = 0.7
 stomachGrowlingWaitTime = 15
 heartBeatingThreshold = 6
-heartbeatVolume = 1.0
+heartbeatVolume = 0.7
 heartBeatingWaitTime = 3
 
 [dustClouds]
-scale = 1.0
+scale = 0.7
 alpha = 1.0
 preventWhenRaining = false
 flyIntoWall = true
@@ -92,16 +88,6 @@ flames = true
 sparks = true
 sounds = true
 extinguishSteam = true
-
-[itemRarity]
-particlesDisplayType = "ON"
-particleColorType = "NAME_COLOR"
-mixedColorName = true
-useItemBorder = true
-colorOverrides = [  ]
-particleMaxHeight = 1.0
-particleMaxSpeed = 1.0
-particleDensity = 1.0
 
 [explosives]
 tntUpdateSmoke = true
