Updated mods and misc config tweaks (should have the rift issues fixed as well)

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -13,7 +13,6 @@ farmersdelight:cooking
 farmersdelight:cutting
 farmersdelight:decomposition
 jei:information
-legendarysurvivaloverhaul:sewing
 sootychimneys:soot_covering
 sootychimneys:soot_scraping
 spoiled:spoil_recipe
@@ -40,3 +39,9 @@ overgeared:rock_knapping
 overgeared:flint_knapping
 overgeared:stone_anvil
 overgeared:steel_anvil
+ribspanning:panning
+legendarysurvivaloverhaul:sewing
+vital_herbs:oil_extractor_jei
+vital_herbs:pedestal_jei
+vital_herbs:teapot_brew_milk
+vital_herbs:teapot_brew_water
