--- a/config/mobspropertiesrandomness-common.toml
+++ b/config/mobspropertiesrandomness-common.toml
@@ -1,6 +1,6 @@
 
-[Base]
-	#If true creeper lingering clouds size changes based off creeper explosion radius.
-	"Better Creeper Lingering" = true
-	"Verbose Log" = false
+["M p r base"]
+	#If true creeper lingering clouds size changes based off their explosion radius.
+	"Better creeper lingering" = true
+	"Verbose log" = false
 
